--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<section class="accio" id="job">
+		<p class="hello-accio">Hello Accio Job</p>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
