--- a/main.html
+++ b/main.html
@@ -8,8 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<section class="accio" id="job">
-		<p class="hello-accio">Hello Accio Job</p>
+	<section>
+		<div class="accio" id="job">
+			<p class="hello-accio">Hello Accio Job</p>
+		</div>
 	</section>
     <script type="text/javascript" src="./script.js">
 </script>
