--- a/main.html
+++ b/main.html
@@ -8,11 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<section>
-		<div class="accio" id="job">
-			<p class="hello-accio">Hello Accio Job</p>
-		</div>
-	</section>
+	<main class="accio" id="job">
+		<p class="hello-accio">Hello Accio Job</p>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
